MAIL/POSTFIXSQU/sqpostfix110/ssl-ingress-certs/cilium.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-dns-and-smtp
  namespace: mail-srv
spec:
  endpointSelector: {}  # Aplica a todos los pods del namespace
  egress:
  - toPorts:
    - ports:
      - port: "53"
        protocol: UDP
  - toPorts:
    - ports:
      - port: "25"
        protocol: TCP
      - port: "465"
        protocol: TCP
      - port: "587"
        protocol: TCP
